--- a/server/composer.json
+++ b/server/composer.json
@@ -7,11 +7,13 @@
     "require": {
         "php": "^8.2",
         "darkaonline/l5-swagger": "^8.6",
-        "laravel/framework": "^11.0",
+        "illuminate/support": "^11.2",
+        "laravel/framework": "^11.2",
         "laravel/jetstream": "^5.0",
-        "laravel/sanctum": "^4.0",
+        "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0"
+        
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -21,6 +23,7 @@
         "nunomaduro/collision": "^8.0",
         "phpunit/phpunit": "^10.5",
         "spatie/laravel-ignition": "^2.4"
+        
     },
     "autoload": {
         "psr-4": {
@@ -66,6 +69,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
